<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Top 40 Jokes</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="action_compose">Compose</string>
    <string name="image_view_content_description">Category</string>
    <string name="title_activity_full_screen">Joke</string>
    <string name="title_activity_settings_screen">Settings</string>
    <string name="top_fourty_limit">40</string>
    <string name="chart_limit">50</string>
    <string name="favorites_limit">50</string>
    <string name="share_chooser_text">Share the joke</string>
    <string name="search_hint">Search in Jokes</string>
    <string name="app_label">Search</string>
    <string name="empty_top_fourty_list_view">You have read all the jokes for today.\nPlease come back tomorrow for more.</string>
    <string name="empty_top_favorites_list_view">You haven\'t liked anything yet.</string>
    <string name="title_notification">New jokes are now available!</string>
    <string name="notification_time_summary">Which time of the day do you want to receive the notification.</string>
    <string name="notification_time_dialog_title">Choose time of the day : </string>
    <string name="joke_of_the_day_summary">Show notification every day.</string>
    <string name="joke_of_the_day_title">Joke of the day</string>
    <string name="notification_time_title">Time for notificatons.</string>
    <string name="dirty_joke_summary">Show dirty jokes.</string>
    <string name="dirty_joke_title">Dirty Jokes</string>
    <string name="favorites">Favorites</string>
    <string name="top_fourty">Top 40</string>

</resources>